--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.output.ansi.enabled=always
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/project
+spring.datasource.url=jdbc:mysql://localhost:3307/project?serverTimeZone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=soni
 
