--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=soni
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
+
+openweathermap.key=609630d2310e81ad8a5ca259fc4e315b
