--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database=mysql
 openweathermap.key=609630d2310e81ad8a5ca259fc4e315b
 
 logging.config=classpath:logback-spring.xml
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
