--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=soni
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 
-openweathermap.key=609630d2310e81ad8a5ca259fc4e315b
+openweathermap.key=
 
 logging.config=classpath:logback-spring.xml
 
